deploy/kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: another-ldap
  namespace: another
spec:
  type: ClusterIP
  selector:
    app: another-ldap
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
